[gd_scene load_steps=2 format=3 uid="uid://bvd80efg7othw"]

[ext_resource type="Script" path="res://src/entities/projectile.gd" id="1_djmcf"]

[node name="Projectile" type="Node2D"]
script = ExtResource("1_djmcf")

[node name="LifetimeTimer" type="Timer" parent="."]

[node name="ProjectileAnimations" type="AnimationPlayer" parent="."]

[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
